fixing bugs at nav on mobile

--- a/css/cmps/header.css
+++ b/css/cmps/header.css
@@ -22,20 +22,22 @@ header .logo {
 
 
 header nav {
-    display: flex;
+    display: none;
     flex-direction: column;
     gap: 30px;
     position: absolute;
     padding: 30px;
     gap: 100px;
-    min-height: 50vh;
+    /* min-height: 50vh; */
     right: 0;
     top: 0;
     background-color: rgb(236, 234, 234);
     transform: translateX(100%);
+    transition: transform 1s;
+
 }
 
-header button {
+header nav button {
     border-radius: 2em;
 }
 
@@ -94,7 +96,7 @@ header button {
         min-height: 100%;
 
         background-color: transparent;
-        transform: translateX(0);
+        transform: translateX(0%);
         margin-inline-end: 300px;
         gap: 60px;
 
